<resources>
    <string name="app_name">SynergyApplication</string>
    <string name="icon_button_description">icon</string>
    <string name="lorem300">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates nam vero tenetur repellendus, unde, porro, maxime maiores molestias similique perferendis ab cum quas. Nobis exercitationem animi possimus eveniet quaerat repudiandae deserunt ullam distinctio quas consectetur aliquam similique rem dolores, corrupti doloribus temporibus neque dolorum consequuntur modi! Nesciunt earum laudantium odit accusantium, alias iure animi esse quod. Earum molestiae iste fugiat voluptates rerum voluptas reiciendis! Aliquid amet porro nulla recusandae illum ad maiores cum at aperiam sunt modi, laborum dicta beatae officiis voluptas itaque accusamus! Tempore beatae quibusdam, quos impedit hic rem reprehenderit aliquid ipsam, pariatur natus! Odit facere possimus ullam. Quos recusandae ipsa repellat cum eius quo. Odio harum obcaecati laboriosam, ea beatae! Fugit odio cupiditate, a sit vero assumenda hic ea velit quis commodi enim cum maxime sint porro dignissimos saepe sequi voluptatem error quisquam cumque. Nihil explicabo tenetur, itaque, reiciendis dolores expedita quis unde, earum dolorem possimus hic neque in optio adipisci rerum iusto error nisi eos quidem repudiandae harum est at. Officiis, dolores iusto soluta veritatis corrupti quod non tempora sint natus dolore, reiciendis aut, a recusandae tenetur vitae quasi numquam itaque autem commodi? Doloremque suscipit perspiciatis corrupti autem, quibusdam numquam quod temporibus sint, a dignissimos minima quas, enim nemo. Similique dolores nobis doloribus recusandae minus cum libero enim, ratione fugit aut commodi earum ullam dolor nam nostrum eligendi officiis temporibus magnam maxime sequi sint. Quisquam eaque cum eveniet maxime aut dolor non, consectetur placeat neque, molestias eius reprehenderit voluptates perferendis rem iusto tempora veritatis omnis laudantium cupiditate labore maiores soluta. Officiis molestiae enim magni deleniti fugit eius libero, ipsa quo earum necessitatibus reiciendis quas, excepturi, laborum et incidunt debitis officia, est porro rem vitae pariatur at voluptates? Ex, amet corporis officiis, minus unde quaerat. Reprehenderit facere, enim numquam velit omnis praesentium minima cumque, quia delectus odio!</string>
    <string name="recycler_title">Выберите хотя бы один вариант</string>
    <string name="adult_ticket_price_hint">Цена взрослого билета</string>
    <string name="budget_hint">Количество монет</string>
    <string name="retire_ticket_price_hint">30% скидка</string>
    <string name="child_ticket_price_hint">50% скидка</string>
    <string name="result_text">Всего: 0</string>
    <string name="tickets_count_hint">Количество билетов</string>
</resources>